# MOCI_DdaSoop_File_BE

./: .env.default  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  readme.md  set_python_path.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: perf.md  style.md
.github/workflows/: file_backend_cd.yml  file_backend_ci.yml
alembic/: env.py
alembic/versions/: 42c7b73737c3_add_width_height.py  6bfa9e2dced2_create_file_table.py
domain/file/: file_route.py
src/: main.py
src/common/database/: database.py
src/common/dependency_injector/: container.py
src/common/env/: __init__.py  config.py  env.py
src/common/env/profile/: BaseProfileConfig.py  DevProfileConfig.py  ProdProfileConfig.py  TestProfileConfig.py  __init__.py
src/domain/file/: __init__.py
src/domain/file/controller/: __init__.py  file_controller.py  file_route.py
src/domain/file/dto/: FileInfoDTO.py  ImageFileSizeDTO.py  __init__.py
src/domain/file/entity/: FileInfo.py
src/domain/file/repository/: file_repository.py
src/domain/file/service/: file_service.py
src/domain/home/controller/: __init__.py
src/tests/domain/file/controller/: test_file_route.py
